# Manim-flow

./: .gitignore  README.md  pyproject.toml  requirements-train.txt
Data Extractor/data/processed_backups/20260520-120426/: README.md
Data Extractor/data/processed_backups/20260520-120426/3b1b-videos/: stats.json
Data Extractor/data/processed_backups/20260520-120426/git-sim/: stats.json  validation.jsonl
Data Extractor/examples/: README.md
Data Extractor/src/extractor/: config.py  formatter.py  main.py  prompt_generator.py  validator.py
Data Extractor/tests/: test_model_ready_dataset.py
configs/: smoke_lora.json
data/processed_backups/20260520-120426/3b1b-videos/: test.jsonl  train_small.jsonl  validation.jsonl
data/processed_backups/20260520-120426/AnimationsWithManim/: stats.json  test.jsonl  train.jsonl  validation.jsonl
data/processed_backups/20260520-120426/git-sim/: test.jsonl  train.jsonl
data/processed_backups/20260520-120426/manim/: stats.json  test.jsonl  validation.jsonl
data/raw/: README.md
docs/: PROJECT_STRUCTURE.md
examples/sample_repo/: sine_scene.py
models/: README.md
scripts/: build_model_ready_dataset.py  cleanup_workspace.py  run_extract_3b1b.ps1  run_smoke_training.ps1  train_lora_smoke.py  validate_training_dataset.py
src/extractor/: __init__.py  config.py  exporter.py  formatter.py  main.py  metadata_generator.py  parser.py  scanner.py  scene_extractor.py  utils.py  validator.py
tests/: README.md  test_exporter_split_integrity.py  test_scanner_and_cleanup_safety.py  test_scene_extractor_dependencies.py
(+1 files in other folders)
