[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-dataset-extractor"
version = "0.1.0"
description = "Extract Manim scene repositories into instruction-tuning JSONL datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
train = [
  "torch>=2.4.0",
  "transformers>=4.45.0",
  "datasets>=3.0.0",
  "accelerate>=0.34.0",
  "peft>=0.13.0"
]

[project.scripts]
manim-dataset-extract = "extractor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
